# Dino-AISS

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  create-repo.json  scan-report.html  scan-report.json  secure-report.md
.github/workflows/: ci.yml
src/: config.rs  fixer.rs  knowledge.rs  lib.rs  main.rs  models.rs
src/scanner/: browser.rs  channels.rs  control_plane.rs  credentials.rs  gateway.rs  memory.rs  mod.rs  nodes.rs  plugins.rs  prompt_injection.rs  sandbox.rs  session.rs  tools.rs
tests/: integration.rs  secure-config.json  vulnerable-config.json
