[package]
name = "dino-aiss"
version = "0.0.1"
edition = "2021"
description = "AI Assistant Security Scanner - Built for OpenClaw"
authors = ["Rex"]
license = "MIT"
repository = "https://github.com/RekitRex21/dino-aiss"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
colored = "2.0"
walkdir = "2.4"
regex = "1.10"
urlencoding = "2.1"
once_cell = "1.19"

[dependencies.reqwest]
version = "0.11"
features = ["blocking"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
